--- a/essays/2022 04-26.md
+++ b/essays/2022 04-26.md
@@ -1,7 +1,7 @@
 ---
 layout: essay
 type: essay
-title: Freedom vs Formality
+title: How Design Patterns Can Stifle One's Learning
 # All dates must be YYYY-MM-DD format!
 date: 2022-02-24
 labels:
@@ -13,11 +13,12 @@ labels:
 <img class="ui tiny right spaced image" src="../images/art.jpg">
 
 
-To a person with almost no artistic talent, UI Semantics was a god send as it did most of the formatting as well as design for you. It could help you neatly design icons, images, div boxes and organize them without the pain of calling position or moving over elements by 1px everytime to get it right. However, using raw HTML and CSS can give a lot more freedom with the options and tools they provide.
+Design Patterns at first can help a beginner be introduced to a certain topic as they provide a clear outline of a solution to certain problems or rather a starting point that one can take to a solution. They can analyze these patterns and get into the general mindset needed to succeed in this industry. However some people will follow these patterns too religiously leading them to try hammer in a design pattern to a problem that can have a entirely different solution. 
 
-## Making your own tools
+## Design Patterns as a First Try
 
-Say you were baking cookies one day and you decided that you wanted them in a certain shape. You essentially have two options here, risk it by trying to make a cookie mold yourself or shaping the cookies yourself or hope to find a cookie mold online that fits your exact design or find something similar. If you try to risk it by making the mold yourself or shaping them yourself, you might fail and end up with some horrendous shape or end up making something beautiful. On the other hand you can scour the stores maybe finding the perfect mold but maybe having to settle for something similar or even nothing at all. This example illustrates the two sides of HTML and CSS as well as UI Semantics as you could try shape out the perfect website with the freedom from HTML and CSS or use the formats in UI Semantic to already shape out most if not all of the elements of the page for you.
+Many people when looking at a problem will think to themselves, where have I seen this before and if that doesn't produce results we will then think to ourselves have I seen something similar? Design Patterns are a big part of this initial thought process as they are the starting point to eventually figuring out a solution. We draw on past experiences of known solutions, which in my experience can be simple things like when asked to sort a list, I would think of the very basic design pattern of a double for loop or more recently how we have built off of the meteor application template a good part of the semester and utilized its core functions to get our intended result of either building a user profile or implementing a website. Design patterns are a quick and sure way to get through these similar kinds of problems but how about entirely new problems, ones that we have never seen before? This is where design patterns could possibly be detrimental to ones learning.
+
 
 ## Artistic Design
 
