--- a/essays/2022 04-26.md
+++ b/essays/2022 04-26.md
@@ -1,16 +1,15 @@
 ---
 layout: essay
 type: essay
-title: How Design Patterns Can Stifle One's Learning
+title: Design Patterns, A Important Tool In Problem Solving
 # All dates must be YYYY-MM-DD format!
-date: 2022-02-24
+date: 2022-04-27
 labels:
-  - HTML
-  - CSS
-  - UI Semantic
+  - Meteor
+  - Design Patterns
 ---
 
-<img class="ui tiny right spaced image" src="../images/art.jpg">
+<img class="ui tiny right spaced image" src="../images/thinking.jpg">
 
 
 Design Patterns at first can help a beginner be introduced to a certain topic as they provide a clear outline of a solution to certain problems or rather a starting point that one can take to a solution. They can analyze these patterns and get into the general mindset needed to succeed in this industry. However some people will follow these patterns too religiously leading them to try hammer in a design pattern to a problem that can have a entirely different solution. 
@@ -20,10 +19,12 @@ Design Patterns at first can help a beginner be introduced to a certain topic as
 Many people when looking at a problem will think to themselves, where have I seen this before and if that doesn't produce results we will then think to ourselves have I seen something similar? Design Patterns are a big part of this initial thought process as they are the starting point to eventually figuring out a solution. We draw on past experiences of known solutions, which in my experience can be simple things like when asked to sort a list, I would think of the very basic design pattern of a double for loop or more recently how we have built off of the meteor application template a good part of the semester and utilized its core functions to get our intended result of either building a user profile or implementing a website. Design patterns are a quick and sure way to get through these similar kinds of problems but how about entirely new problems, ones that we have never seen before? This is where design patterns could possibly be detrimental to ones learning.
 
 
-## Artistic Design
+## Thinking Inside the Box
 
-However when designign a website I personally think that it mostly comes down to artistic design with some coding sprinkled in there. You have to ask yourself does this color match this one, would this div box look out of place here, how can I move this element to a certain place? While all solvable with HTML and CSS, what if a person doesn't have that kind of artistic ingenuity, it is much easier as well as nicer if they could have most things formatted for them. As when I made my first web page using HTML for a school project, it looked terrible, something akin to a kids drawing compared to what some of my ohter classmates made. When I first tried out UI semantics, I thought it was very helpful as I didn't have to worry too much about centering div boxes a certain way or controlling the margins and paddings to look perfect, it was already done for me.
+Now problem solving is a vital skill in succeeding in any industry and finding new problems is no stranger to many people and being able to solve these new problems is a part of many jobs. However many people in these situations can tend to fixate on known design patterns and solutions and completely disregard any other kinds of solutions. This is a result of people applying these design patterns without knowing the underlying reasons or logic as to why these design patterns. Thus end up not knowing how to effectivly use these design patterns and end up solely relying on past solutions to tackle new problems. This is nothing new to anyone however as this is something that everyone has come across sometime in their life, that in which most of the time we are just given the solution and explanation and not given the experience and further practice of trying to have more complex thinking instead of just memorizing formulas and known solutions.
 
-# Final Thoughts
 
-Having a good balance of HTML and CSS along with UI Semantics is one of the best choices for everyone in my opinion regardless of artistic or architecture talent. Say someone already had their whole website planned out, where to put the div boxes, images, paragraphs, inputs, they might find that there is an easier way of placing them using UI Semantics rather than eyeballing it through position or floats. While people who don't know where to start are given frameworks to build off of with UI Semantics and they can add a little of their artistic touch with HTML and CSS, whether it be changing the color or moving some elements to the side. UI semantics is overall a great tool to use with HTML and CSS.
+## A Useful Tool
+
+That is why I like to now think of design patterns as more of a tool to use when approaching a problem. When programming, you are given a whole variety of options to approach a problem as it can be done it a thousand ways all with different kinds of code. We can use design patterns as a tool to fix together code that fits out desired solution rather than just tunnel visioning by forcing the problem to fit our design pattern. Thus we must be careful to not see design patterns as a solution but as a tool to help us get there.
+
