--- a/essays/2022 04-26.md
+++ b/essays/2022 04-26.md
@@ -21,7 +21,7 @@ Many people when looking at a problem will think to themselves, where have I see
 
 ## Thinking Inside the Box
 
-Now problem-solving is a vital skill in succeeding in any industry and finding new problems is no stranger to many people being able to solve these new problems is a part of many jobs. However many people in these situations can tend to fixate on known design patterns and solutions and completely disregard any other kinds of solutions. This is a result of people applying these design patterns without knowing the underlying reasons or logic as to why these design patterns. Thus end up not knowing how to effectively use these design patterns and end up solely relying on past solutions to tackle new problems. This is nothing new to anyone however as this is something that everyone has come across sometime in their life, that in which most of the time we are just given the solution and explanation and not given the experience and further practice of trying to have more complex thinking instead of just memorizing formulas and known solutions.
+Now problem-solving is a vital skill in succeeding in any industry and finding new problems is no stranger to many people as being able to solve these new problems is a part of many jobs. However many people in these situations can tend to fixate on known design patterns and solutions and completely disregard any other kinds of solutions. This is a result of people applying these design patterns without knowing the underlying reasons or logic as to why these design patterns. Thus end up not knowing how to effectively use these design patterns and end up solely relying on past solutions to tackle new problems. This is nothing new to anyone however as this is something that everyone has come across sometime in their life, that in which most of the time we are just given the solution and explanation and not given the experience and further practice of trying to have more complex thinking instead of just memorizing formulas and known solutions.
 
 
 ## A Useful Tool
