--- a/essays/2022 04-26.md
+++ b/essays/2022 04-26.md
@@ -16,7 +16,7 @@ Design Patterns at first can help a beginner be introduced to a certain topic as
 
 ## Design Patterns as a First Try
 
-Many people when looking at a problem will think to themselves, where have I seen this before if that doesn't produce results we will then think to ourselves have I seen something similar? Design Patterns are a big part of this initial thought process as they are the starting point to eventually figuring out a solution. We draw on past experiences of known solutions, which in my experience can be simple things like when asked to sort a list, I would think of the very basic design pattern of a double for loop or more recently how we have built off of the meteor application template a good part of the semester and utilized its core functions to get our intended result of either building a user profile or implementing a website. Design patterns are a quick and sure way to get through these similar kinds of problems but how about entirely new problems, ones that we have never seen before? This is where design patterns could possibly be detrimental to ones learning.
+Many people when looking at a problem will think to themselves, "Where have I seen this before?", and if that doesn't produce results we will then think to ourselves have I seen something similar? Design Patterns are a big part of this initial thought process as they are the starting point to eventually figuring out a solution. We draw on past experiences of known solutions, which in my experience can be simple things like when asked to sort a list, I would think of the very basic design pattern of a double for loop or more recently how we have built off of the meteor application template a good part of the semester and utilized its core functions to get our intended result of either building a user profile or implementing a website. Design patterns are a quick and sure way to get through these similar kinds of problems but how about entirely new problems, ones that we have never seen before? This is where design patterns could possibly be detrimental to ones learning.
 
 
 ## Thinking Inside the Box
